[gd_scene load_steps=4 format=3 uid="uid://xqqavh5wjjyb"]

[ext_resource type="Script" uid="uid://dlwa1t05joc6m" path="res://menus/licenses/licenses.gd" id="1_p6kj4"]
[ext_resource type="PackedScene" uid="uid://q5vgm3ca3pnn" path="res://menus/licenses/license_info.tscn" id="2_5fb2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fb2i"]
bg_color = Color(0.427451, 0.294118, 0.152941, 1)
corner_detail = 1

[node name="Liceneses" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6kj4")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/autohide = 0
theme_override_styles/split_bar_background = SubResource("StyleBoxFlat_5fb2i")

[node name="PanelContainer" type="PanelContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer/PanelContainer"]
layout_mode = 2

[node name="LicenseTree" type="Tree" parent="VSplitContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="LicenseInfo" parent="VSplitContainer" instance=ExtResource("2_5fb2i")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 640)
layout_mode = 2
size_flags_stretch_ratio = 2.0

[connection signal="item_selected" from="VSplitContainer/PanelContainer/ScrollContainer/LicenseTree" to="." method="_on_tree_item_selected"]
